Adding password validation to signup

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,6 +7,7 @@
 	<form method='POST' action='/login'>
 		<input type="text" placeholder='Username' name="username">
 		<input type="password" placeholder='Password' name="password">
-		<input type='submit' value='Clock In' class='btn btn-primary'>
+		<input type='submit' value='Clock In' class='btn btn-success'>
 	</form>
+	<a href="/signup" class='btn btn-primary'>Sign Up</a>
 </div>
