--- a/app/views/test.erb
+++ b/app/views/test.erb
@@ -1,8 +1,10 @@
 <% if current_user %>
 	<h1>Welcome: <%= current_user.username%></h1>
+
 	<a href="/logout" class='btn btn-danger'>Logout</a>
 <% else %>
 <h1>You're not logged in</h1>
+<a href="/login" class='btn btn-warning'>Login</a>
 <% end %>
 
 
