--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  
+  <script src="/js/prettydate.js"></script>
   <script src="/js/application.js"></script>
 
   <title>TimeClocker</title>
