--- a/app/views/timeclock.erb
+++ b/app/views/timeclock.erb
@@ -10,7 +10,7 @@
   <div class="question-box">
     <% if @questions %>
       <% @questions.each do |question| %>
-        <p class="question" question-id="<%= question.id %>"><%= question.content %></p>
+        <option class="question" question-id="<%= question.id %>"><%= question.content %></option>
       <% end %>
     <% end %>
     <p><a class="next-question" href="">Next</a></p>
@@ -27,6 +27,7 @@
       <% end %>
       <br/>
       <br/>
+      <input type='submit' value='Complete Sign Up' class='btn btn-success'>
       <input class="btn btn-success" type="submit" value="Finish" />
     </form>
   </div>
