--- a/app/views/clockout.erb
+++ b/app/views/clockout.erb
@@ -4,22 +4,24 @@
     <h2><%= Time.now.strftime("%H:%m") %></h2>
   </div>
 
-  <div class="photo-box">
+  <div class="time-spent">
+    <h1>Time spent working </h1>
+  </br>
+    <h1> How was your day?</h1>
   </div>
 
-  <div class="question-box">
-    <% if @questions %>
-      <% @questions.each do |question| %>
-        <option class="question" question-id="<%= question.id %>"><%= question.content %></option>
-      <% end %>
-    <% end %>
-    <p><a class="next-question" href="">Next</a></p>
+  <div class="emojis">
+    <div class="emoticon" href="#"></div>
+    <div class="emoticon2" href="#"></div>
+    <div class="emoticon3" href="#"></div>
   </div>
+
+</br>
 
   <div class="text-center">
     <form class="" action="/answers" method="post">
       <input type="hidden" class="question_id" name="question_id" value="">
-      <textarea name="content" placeholder="Type your answer here"></textarea>
+      <textarea name="content" placeholder="Tell us about it"></textarea>
       <% if @errors %>
         <% @errors.each do |error| %>
           <p class="error"><%= error %></p>
@@ -27,7 +29,7 @@
       <% end %>
       <br/>
       <br/>
-      <input class="btn btn-success" type="submit" value="Finish" />
+      <input class="btn btn-success" type="submit" value="Finish the day" />
     </form>
   </div>
 
