Pretty up some stuff and remove old time js

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -90,6 +90,9 @@ textarea {
 .time-spent {
   text-align: center;
 }
-#photo-box > * {
+#photo-box > * > * {
   margin-bottom: 15px;
+}
+.save-wrap {
+  display: none;
 }
