--- a/app/views/timeclock.erb
+++ b/app/views/timeclock.erb
@@ -5,10 +5,14 @@
   </div>
 
   <div id="photo-box" class="center-block">
-    <video class="center-block" id="video" width="640" height="480" autoplay></video>
-    <button class="btn btn-primary center-block" id="snap">Snap Photo</button>
-    <canvas class="center-block" id="canvas" width="640" height="480"></canvas>
-    <button class="btn btn-success center-block" id="btn-save">Save Photo</button>
+    <div class="snap-wrap">
+      <video class="center-block" id="video" width="640" height="480" autoplay></video>
+      <button class="btn btn-primary center-block" id="snap">Snap Photo</button>
+    </div>
+    <div class="save-wrap">
+      <canvas class="center-block" id="canvas" width="640" height="480"></canvas>
+      <button class="btn btn-success center-block" id="btn-save">Save Photo</button>
+    </div>
   </div>
 
   <div class="question-box">
