--- a/public/css/application.css
+++ b/public/css/application.css
@@ -34,17 +34,22 @@ form input.btn {
   margin-bottom: 10px;
 }
 
-textarea {
+.container textarea {
   width: 350px;
   height: 180px;
-  padding-left: 0px;
+  border: 3px solid #cccccc;
+  padding: 5px;
+  font-size: 18px;
 }
+
 
 .container .question-box {
   text-align: center;
 }
 .container .question {
   display: none;
+  font-weight:bold;
+  font-size: 25px;
 }
 
 .error {
@@ -95,4 +100,8 @@ textarea {
 }
 .save-wrap {
   display: none;
+}
+
+.glyphicon {
+  vertical-align: top;
 }
