--- a/app/views/working.erb
+++ b/app/views/working.erb
@@ -1,3 +1,6 @@
-<div class='start-time'>
-   <%= @start_time %>
+<div class="container">
+  <!-- Time Elapsed -->
+  <div class="finish-work text-center">
+    <a class="btn btn-primary" href="/clockout">Finish the day</a>
+  </div>
 </div>
