--- a/app/views/clockout.erb
+++ b/app/views/clockout.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="timebox">
     <h1><%= Time.now.strftime("%A %B %d, %Y") %></h1>
-    <h2><%= Time.now.strftime("%H:%m") %></h2>
-  </div>
+    <h2><%= Time.now.strftime("%H:%M") %></h2>
+
 
   <div class="time-spent">
     <h1>Time spent working </h1>
