--- a/app/views/working.erb
+++ b/app/views/working.erb
@@ -1,5 +1,13 @@
-<div class='start-time'>
- <%= Time.now - @start_time %>
-</div>
+<div class="container">
+  <div class='start-time'>
+   <%= Time.now - @start_time %>
+  </div>
 
-<div class="your-clock"> it exists </div>
+  <div class="clock-wrap text-center">
+    <h1>You've been working</h1>
+    <div class='your-clock'></div>
+  </div>
+  <div class='finish-work text-center'>
+    <a class='btn btn-primary' href='/clockout'>Finish the day</a>
+  </div>
+</div>
