Final commit on some styling

--- a/app/views/timeclock.erb
+++ b/app/views/timeclock.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="timebox">
-    <h1><%= Time.now.strftime("%A %B %d, %Y") %></h1>
-    <h2><%= Time.now.strftime("%H:%M") %></h2>
-  </div>
+<div class="timebox somethingunique">
+  <h1><%= Time.now.strftime("%A %B %d, %Y") %></h1>
+  <h2><%= Time.now.strftime("%H:%M") %></h2>
+</div>
 
+<div class="container">
   <div id="photo-box" class="center-block">
     <div class="snap-wrap">
       <video class="center-block" id="video" width="640" height="480" autoplay></video>
